2008-11-18  Curtis Gedak  <gedakc@gmail.com>

	* include/Partition.h,
	  include/Utils.h,
	  src/Dialog_Partition_Info.cc,
	  src/Dialog_Partition_New.cc,
	  src/Dialog_Partition_Resize_Move.cc,
	  src/ext2.cc,
	  src/ext3.cc,
	  src/fat16.cc,
	  src/fat32.cc,
	  src/GParted_Core.cc,
	  src/jfs.cc,
	  src/linux_swap.cc,
	  src/ntfs.cc,
	  src/OperationCheck.cc,
	  src/reiserfs.cc,
	  src/TreeView_Detail.cc,
	  src/Win_GParted.cc,
	  src/xfs.cc: Fixed incorrect spelling of filesystem and mountpoint.

	* src/DialogFeatures.cc: Added translator comment.
	  - Renamed button to improve clarity of meaning.
	  - Closes GParted bug #561350

2008-11-14  Curtis Gedak  <gedakc@gmail.com>

	* include/DialogFeatures.h,
	  src/DialogFeatures.cc: Improved dialog readability.
	  - Changed title Features to File System Support.
	  - Renamed button Refresh to Rescan Support.
	  - Created expander for legend and added narrative.
	  - Removed columns detect and read.
	  - Added column for Required Software.
	  - Closes GParted bugs #342682, and #353104

	* include/Utils.h, 
	  src/Utils.cc: Created method get_filesystem_software().

	* src/Win_GParted.cc: Moved menu entry
	- "Gparted->Show Features" moved to "View->File System Support".

2008-11-13  Curtis Gedak  <gedakc@gmail.com>

	* include/FS_Info.h,
	  src/FS_Info.cc,
	  src/GParted_Core.cc,
	  README: Improved read label performance with blkid cached results.
	  - When possible use blkid cached results to determine volume label.

2008-11-12  Curtis Gedak  <gedakc@gmail.com>

	* README: Updated directories and dependencies.

2008-11-11  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Partition_Info.cc,
	  src/GParted_Core.cc:  Added read and display UUID.

	* include/Partition.h,
	  src/Partition.h: Added UUID.

	* include/FS_Info.h,
	  include/Makefile.am,
	  src/FS_Info.cc,
	  src/Makefile.am:  Created class to read file system UUIDs.

2008-11-10  Curtis Gedak  <gedakc@gmail.com>

	* src/fat16.cc,