@@ -1,3 +1,12 @@
+2008-11-19  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Win_GParted.cc: Added language length conditional Undo display.
+	  - If translated language is relatively long, then
+	      split the "Resize/Move" toolbar button text into two lines, and
+	      do not display the "Undo" button.
+	  - Permits all languages to see a full toolbar at default window size.
+	  - Closes GParted bug #561068
+
 2008-11-18  Curtis Gedak  <gedakc@gmail.com>
 
 	* include/Partition.h,
